# Is-Apple-Silicon

./: Cargo.toml  README.md
src/: main.rs  read_bin.rs
